# OpenHarness

./: .gitignore  AGENTS.md  Installer.bat  PATCH_NOTES.md  README.md  README.openharness.md  pyproject.toml  run_myharness_web.bat  run_myharness_web_dev.bat  run_openharness_web.bat
.myharness/: settings.json
.openharness/: credentials.example.json  settings.json
.skills/huashu-design/: .gitignore  LICENSE  README.en.md  SKILL.md  test-prompts.json
.skills/learned-category-bash/: SKILL.md
.skills/learned-category-web-fetch/: SKILL.md
.skills/learned-cmd-python-skills-skill-creator-scripts-init-skill-p/: SKILL.md
.skills/learned-web-fetch-web-fetch-failed-client-error-403-forbidde/: SKILL.md
.skills/learned-web-fetch-web-fetch-failed-client-error-404-not-foun/: SKILL.md
.skills/playwright-capture/: SKILL.md
.skills/ui-design-essence/: SKILL.md
.skills/visual-artifact/: SKILL.md
.skills/visual-review/: SKILL.md
.tmp-chrome-check/: Local State
.tmp-chrome-check/Default/: Favicons  History  Preferences  Secure Preferences  Web Data
.tmp-chrome-check/GrShaderCache/: index
.tmp-chrome-check/GraphiteDawnCache/: index
.tmp-chrome-check/ShaderCache/: index
.tmp-chrome-check/checklist-archive-profile/: DevToolsActivePort  Local State
.tmp-chrome-check/checklist-fix-profile/: DevToolsActivePort  Local State
.tmp-chrome-check/checklist-line-complete-profile/: DevToolsActivePort  Local State
.tmp-chrome-check/segmentation_platform/: ukm_db
Playground/인터넷_조사/: index.html  report.md  tetris.html
frontend/web/: index.html  package-lock.json  package.json  script.js  server.mjs  styles.css
frontend/web/modules/: ui.js  (+10 more)
outputs/: singularity-gallery-5y-topic-data.json  singularity-gallery-5y-topic-notes.md  singularity-gallery-5y-topic-report.html
scripts/: build_posco_ca_bundle.py  run_myharness_web_dev.ps1  run_myharness_web_server.ps1  run_openharness_web_server.ps1
src/openharness/: __init__.py  cli.py  project_preferences.py
tests/: test_hooks_skills_plugins_real.py  test_merged_prs_on_autoagent.py  test_project_preferences.py  test_real_large_tasks.py  test_untested_features.py
tests/test_api/: test_codex_client.py  test_openai_client.py  test_pgpt_auth.py
tests/test_channels/: test_slack.py
tests/test_commands/: test_registry.py
tests/test_config/: test_settings.py
tests/test_coordinator/: test_coordinator_mode.py
tests/test_engine/: test_query_engine.py
tests/test_learning/: test_service.py
tests/test_ohmo/: test_prompts.py
(+381 files in other folders)
